--- a/README
+++ b/README
@@ -5,3 +5,6 @@ MrScheme-desktop develops a light gtk+ wrapper around the original
 MrScheme web application. The main interest of using this interface
 is the ability to load and save file from and to local filesystems
 without sandboxing limitations imposed by browsers.
+
+To regenerate the make file, use "autoreconf -i", then you can use
+regular "./configure" "make" and "make install" process.
